--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 
 .radio-btn {
     margin-top: 24px;
+    font-size: 12px;
 }
 
 .radio-btn__option {
@@ -24,8 +25,8 @@
 
 
 .radio-btn__outer-ring {
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
     border: 2px solid black;
     display: flex;
@@ -38,7 +39,7 @@
 }
 
 .radio-btn__input {
-    width: 12px;
-    height: 12px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
 }
