--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,49 @@
+@font-face {
+    font-family: 'Styrene A Web';
+    src: local('Styrene A Web Medium'), local('Styrene-A-Web-Medium'),
+        url('assests/fonts/StyreneAWeb-Medium.woff2') format('woff2'),
+        url('assests/fonts/StyreneAWeb-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+  }
+
 
 .app {
     background: #ECEFF4;
     height: 100vh;
     width: 100vw;
     padding: 60px;
+    font-family: "Styrene A Web";
+}
+
+h1 {
+    font-size: 16px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0px;
+    text-align: left;
+    line-height: 20px;
+}
+
+p {
+    margin-top: 8px;
+    opacity: 0.6;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 20px;
 }
 
 .radio-btn {
-    margin-top: 24px;
+    margin-top: 16px;
     font-size: 12px;
 }
 
 .radio-btn__option {
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 16px;
     height: 64px;
     width: 400px;
     padding: 24px;
@@ -25,10 +57,10 @@
 
 
 .radio-btn__outer-ring {
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     border-radius: 50%;
-    border: 2px solid black;
+    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
