--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,8 @@ input[type="radio"] {
 
 input[type="radio"]::before {
     content: "";
-    width: 0.65em;
-    height: 0.65em;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     transform: scale(0);
     transition: 120ms transform ease-in-out;
